# morfology_analysis

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
delta_phylo/: __init__.py
delta_phylo/cli/: __init__.py  commands.py  main.py
delta_phylo/io/: __init__.py  csv_writer.py  nexus_writer.py  phylip_writer.py  tnt_writer.py
delta_phylo/matrix/: __init__.py  encoding.py  matrix_builder.py  matrix_cleaning.py
delta_phylo/parser/: __init__.py  characters.py  delta_reader.py  states.py  taxa.py
delta_phylo/phylogeny/: __init__.py  distance.py  likelihood.py  parsimony.py  tree_utils.py
delta_phylo/utils/: __init__.py  logging.py  validation.py
delta_phylo/visualization/: __init__.py  matrix_heatmap.py  tree_plot.py
docs/: ROADMAP.md  architecture.md  delta_format.md  tutorial.md
examples/: run_analysis.py
examples/example_delta_dataset/: characters  items  specs
tests/: test_cli.py  test_delta_parser.py  test_encoding.py  test_integration.py  test_likelihood.py  test_matrix_builder.py  test_matrix_cleaning.py  test_numeric_characters.py  test_parsimony.py  test_tree_output.py  test_tree_utils.py  test_validation.py
