[metadata]
name = delta-phylo
version = 0.1.0
description = Morphological phylogenetic analyses using DELTA format datasets
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = delta-phylo contributors
python_requires = >=3.9
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
packages = find:
install_requires =
    numpy>=1.21
    pandas>=1.3
    biopython>=1.79
    matplotlib>=3.4
    scipy>=1.7
    click>=8.0

[options.entry_points]
console_scripts =
    delta-phylo = delta_phylo.cli.main:cli

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov>=4.0
    flake8>=6.0
    black>=23.0
    mypy>=1.0

[flake8]
max-line-length = 88
extend-ignore = E203, W503
